10.2: * [Sheets/Grid] In sheets, the `layout: grid` style has been significantly improved. The grid no longer shows checkboxes on each item for selection. Instead, the entire cell is toggled on and off by clicking anywhere in it. Cells use flexbox for arrangement, and sheet columns are displayed from top-to-bottom; allowing for enhancements like icons and descriptions. This makes it easier to show many options in a smaller space while retaining readability.

--- a/features/cerberusweb.core/resources/css/cerb.css
+++ b/features/cerberusweb.core/resources/css/cerb.css
@@ -743,6 +743,47 @@ UL.navmenu > LI.selected > A {
   display: none;
 }
 
+.cerb-sheet-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: stretch;
+  align-items: stretch;
+  gap: 5px;
+}
+.cerb-sheet-grid .cerb-sheet--row {
+  padding: 5px;
+  flex: 1 1 auto;
+  text-align: center;
+  cursor: pointer;
+  background-color: var(--cerb-color-background-contrast-240);
+  border: 1px solid var(--cerb-color-background-contrast-240);
+  border-radius: 5px;
+}
+.cerb-sheet-grid .cerb-sheet--row:hover {
+  background-color: var(--cerb-color-background-contrast-200);
+  border: 1px solid var(--cerb-color-background-contrast-200);
+}
+.cerb-sheet-grid .cerb-sheet--row DIV[data-cerb-column-type=selection] {
+  font-weight: bold;
+  font-size: 110%;
+}
+.cerb-sheet-grid .cerb-sheet--row DIV[data-cerb-column-type=selection] INPUT[type=radio], .cerb-sheet-grid .cerb-sheet--row DIV[data-cerb-column-type=selection] INPUT[type=checkbox] {
+  display: none;
+}
+.cerb-sheet-grid .cerb-sheet--row-selected {
+  background-color: var(--cerb-color-background-contrast-75);
+  border-color: var(--cerb-color-background-contrast-75);
+  color: var(--cerb-color-text-inverse);
+}
+.cerb-sheet-grid .cerb-sheet--row-selected DIV[data-cerb-column-type=selection] {
+  color: var(--cerb-color-text-inverse);
+}
+.cerb-sheet-grid .cerb-sheet--row-selected:hover {
+  background-color: var(--cerb-color-background-contrast-50);
+  border: 1px solid var(--cerb-color-background-contrast-50);
+}
+
 TABLE.worklist {
   background-color: var(--cerb-color-table-header-background);
   border-radius: 5px 5px 0 0;
