--- a/install/extras/developers/css/cerb.css/layout/cerb-styles.scss
+++ b/install/extras/developers/css/cerb.css/layout/cerb-styles.scss
@@ -549,6 +549,55 @@ UL {
 	}
 }
 
+.cerb-sheet-grid {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: stretch;
+	align-items: stretch;
+	gap: 5px;
+	
+	.cerb-sheet--row {
+		padding: 5px;
+		flex: 1 1 auto;
+		text-align: center;
+		cursor: pointer;
+		background-color: var(--cerb-color-background-contrast-240);
+		border: 1px solid var(--cerb-color-background-contrast-240);
+		
+		border-radius: 5px;
+		
+		&:hover {
+			background-color: var(--cerb-color-background-contrast-200);
+			border: 1px solid var(--cerb-color-background-contrast-200);
+		}
+		
+		DIV[data-cerb-column-type=selection] {
+			font-weight: bold;
+			font-size: 110%;
+			
+			INPUT[type=radio], INPUT[type=checkbox] {
+				display: none;
+			}
+		}
+	}
+
+	.cerb-sheet--row-selected {
+		background-color: var(--cerb-color-background-contrast-75);
+		border-color: var(--cerb-color-background-contrast-75);
+		color: var(--cerb-color-text-inverse);
+
+		DIV[data-cerb-column-type=selection] {
+			color: var(--cerb-color-text-inverse);
+		}
+		
+		&:hover {
+			background-color: var(--cerb-color-background-contrast-50);
+			border: 1px solid var(--cerb-color-background-contrast-50);
+		}
+	}
+}
+
 // Worklists
 
 TABLE.worklist {
